# ABLkit

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README  README.md  example.py  framework.py  framework_hed.py  framework_hed_knn.py  pyproject.toml  readme.md  requirements.txt  setup.py  share_example.py
.github/workflows/: build-and-test.yaml  lint.yaml  lint.yml
abducer/: abducer_base.py  kb.py
abl/: __init__.py  __version__.py  framework.py  framework_hed.py
abl/abducer/: abducer_base.py  kb.py  readme.md  readme_en.md
abl/bridge/: __init__.py  base_bridge.py  simple_bridge.py
abl/data/: __init__.py  data_converter.py
abl/data/evaluation/: __init__.py  base_metric.py  reasoning_metric.py  symbol_accuracy.py
abl/data/structures/: base_data_element.py  list_data.py
abl/dataset/: __init__.py  bridge_dataset.py  classification_dataset.py  prediction_dataset.py  regression_dataset.py
abl/evaluation/: __init__.py  abl_metric.py  base_metric.py  reasoning_metric.py  semantics_metric.py  symbol_metric.py
abl/learning/: __init__.py  abl_model.py  basic_model.py  basic_nn.py  model_converter.py  readme.md
abl/models/: basic_model.py  nn.py  wabl_models.py
abl/reasoning/: __init__.py  base_kb.py  ground_kb.py  kb.py  prolog_based_kb.py  readme.md  reasoner.py  search_based_kb.py
abl/structures/: __init__.py  base_data_element.py  list_data.py
abl/utils/: __init__.py  cache.py  logger.py  utils.py
ablkit/: __init__.py
ablkit/bridge/: __init__.py  a3bl_bridge.py  base_bridge.py  simple_bridge.py  verification_bridge.py
ablkit/data/: __init__.py  data_converter.py
ablkit/learning/: __init__.py  abl_model.py  basic_nn.py  model_converter.py
ablkit/reasoning/: __init__.py  kb.py  reasoner.py  verification.py
ablkit/utils/: __init__.py  cache.py  logger.py  manager.py  utils.py
build_tools/: requirements.txt
datasets/: data_generator.py
datasets/hed/: README.md  equation_generator.py  get_hed.py  learn_add.pl
datasets/hwf/: get_hwf.py
datasets/mnist_add/: get_mnist_add.py  train_data.txt
docs/: Makefile  README.rst  References.rst  abl.bridge.rst  abl.dataset.rst  abl.evaluation.rst  abl.learning.rst  abl.reasoning.rst  abl.rst  abl.structures.rst  abl.utils.rst  conf.py  index.rst  make.bat  requirements.txt
docs/ABL/: Test.md
docs/API/: abl.bridge.rst  abl.data.rst  abl.dataset.rst  abl.evaluation.rst  abl.learning.rst  abl.reasoning.rst  abl.structures.rst  abl.utils.rst  ablkit.bridge.rst  ablkit.data.rst  ablkit.learning.rst  ablkit.reasoning.rst  ablkit.utils.rst
docs/Brief-Introduction/: Components.rst  Usage.rst
docs/Examples/: BDD-OIA.rst  HED.rst  HWF.rst  MNISTAdd.rst  ZOO.rst  Zoo.rst
docs/Intro/: Advanced.rst  Basics.rst  Bridge.rst  Datasets.rst  Evaluation.rst  Learning.rst  Quick Start.rst  Quick-Start.rst  QuickStart.rst  Reasoning.rst
docs/Overview/: Abductive Learning.rst  Abductive-Learning.rst  Installation.rst  Introduction.rst  Quick Start.rst  Usage.rst
docs/_static/: custom.css
docs/_templates/: classtemplate.rst
examples/: example.py  hed_example.ipynb  hwf_example.ipynb  mnist_add_example.ipynb  nonshare_example.py
examples/bdd_oia/: README.md  bdd_oia.ipynb  bridge.py  main.py  metric.py  requirements.txt
examples/hed/: README.md  bridge.py  consistency_metric.py  framework_hed.py  hed.ipynb  hed_bridge.py  hed_example.ipynb  hed_knn_example.py  hed_tmp.py  main.py  requirements.txt  utils.py
examples/hwf/: README.md  hwf.ipynb  hwf_example.ipynb  hwf_kb.py  main.py  requirements.txt
examples/mnist_add/: README.md  add.pl  main.py  main_with_model_converter.py  mnist_add.ipynb  mnist_add_example.ipynb  mnist_add_kb.py  new_feature.py  requirements.txt
examples/models/: nn.py
examples/zoo/: README.md  get_dataset.py  kb.py  main.py  requirements.txt  zoo.ipynb  zoo.py  zoo_example.ipynb
models/: basic_model.py  lenet5.py  nn.py  wabl_models.py
tests/: conftest.py  test_abl_model.py  test_basic_nn.py  test_models.py  test_reasoning.py
utils/: plog.py  utils.py
(+46 files in other folders)
